--- a/ansible/drones_command.yml
+++ b/ansible/drones_command.yml
@@ -3,11 +3,11 @@
   hosts: drones
   remote_user: lis
   become: yes # runs everything with sudo
-  vars_prompt: 
-    - name: command
-      prompt: "What command do you want to run on all of the drones (WARNING: Runs as sudo!)?"
-      private: false  
 
+  # vars_prompt: 
+  #   - name: command
+  #     prompt: "What command do you want to run on all of the drones (WARNING: Runs as sudo!)?"
+  #     private: false  
   # tasks:
   #   - name: Command
   #     ansible.builtin.command: '{{ command }}'
