add thrust topic in config

--- a/ros_packages/omninxt_bridge_ros2/config/command_converter_params.yaml
+++ b/ros_packages/omninxt_bridge_ros2/config/command_converter_params.yaml
@@ -2,6 +2,7 @@ command_converter:
   ros__parameters:
     rates_input_topic: "/mpc/out/vehicle_rates_setpoint"
     torque_input_topic: "/mpc/out/vehicle_torque_setpoint"
+    thrust_input_topic: "/mpc/out/vehicle_thrust_setpoint"
     motors_input_topic: "/mpc/out/actuator_motors"
     output_topic: "/controller/cmd"
     sync_tolerance: 0.001 
