--- a/ros_packages/drone_state_manager_ros2/package.xml
+++ b/ros_packages/drone_state_manager_ros2/package.xml
@@ -12,6 +12,7 @@
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>px4_ros_com</exec_depend>
   <exec_depend>swarmnxt_msgs</exec_depend>
+  <exec_depend>mpc_controller_ros2_msgs</exec_depend>
   
   <test_depend>pytest</test_depend>
   
