--- a/ros_packages/drone_state_manager_ros2/CMakeLists.txt
+++ b/ros_packages/drone_state_manager_ros2/CMakeLists.txt
@@ -7,6 +7,7 @@ find_package(rclpy REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(mavros_msgs REQUIRED)
 find_package(swarmnxt_msgs REQUIRED)
+find_package(mpc_controller_ros2_msgs REQUIRED)
 
 # Install Python scripts
 install(PROGRAMS
