--- a/ros_packages/safety_checker_ros2/package.xml
+++ b/ros_packages/safety_checker_ros2/package.xml
@@ -8,9 +8,9 @@
   <license>TODO: License declaration</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
-  <depend>nlohmann-json-dev</depend>
   <depend>px4_ros_com</depend>
   <depend>swarmnxt_msgs</depend>
+  <depend>px4_msgs</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
