--- a/ros_packages/swarmnxt_msgs/CMakeLists.txt
+++ b/ros_packages/swarmnxt_msgs/CMakeLists.txt
@@ -22,6 +22,7 @@ rosidl_generate_interfaces(${PROJECT_NAME}
   "msg/ControllerCommand.msg"
   "msg/Trigger.msg"
   "msg/DroneState.msg"
+  "srv/GetPlanes.srv"
   DEPENDENCIES ${DEPENDENCIES}
 )
 
