--- a/ansible/host_computer.yml
+++ b/ansible/host_computer.yml
@@ -124,13 +124,42 @@
       block:
         - name: Get Planner
           ansible.builtin.git:
-            repo: git@github.com:ctoumieh/multi_agent_pkgs
-            dest: "{{ host_ros_path }}/multi_agent_pkgs"
+            repo: https://github.com/ctoumieh/multi_agent_pkgs
+            dest: "{{ host_ros_path }}/src/multi_agent_pkgs"
             force: yes
 
-        
+        - name: Remove unwanted directories from planner packages
+          file:
+            path: "{{ drone_ros_path }}/src/multi_agent_pkgs/{{ item }}"
+            state: absent
+          loop:
+            - convex_decomp_util
+            - decomp_ros
+            - env_builder
+            - jps3d
+            - mapping_util
+            - multi_agent_planner
+            - path_finding_util
+            - voxel_grid_util
 
-    
+    - name: MPC Messages 
+      become: false
+      block:
+        - name: Get MPC
+          ansible.builtin.git:
+            repo: https://github.com/lis-epfl/mpc_controller_pkgs
+            dest: "{{ host_ros_path }}/src/mpc_controller_pkgs"
+            force: yes
+
+        - name: Remove unwanted directories from MPC controller packages
+          file:
+            path: "{{ drone_ros_path }}/src/mpc_controller_pkgs/{{ item }}"
+            state: absent
+          loop:
+            - dockerfiles
+            - px4_sim_bridge_ros2
+            - mpc_controller_ros2
+
     - name: Swarm Nodes
       block: 
         - name: Get swarm package 
@@ -149,7 +178,6 @@
           loop: 
             - { repo: "https://github.com/PX4/px4_ros_com", name: "px4_ros_com", version: "main"}
             - { repo: "https://github.com/Auterion/px4-ros2-interface-lib", name: "px4_ros2_interface_lib", version: "1.6.1"}
-    
             
         - name: List ros_packages directories
           ansible.builtin.find:
@@ -157,7 +185,6 @@
             file_type: directory
             recurse: false
           register: ros_packages_reg
-        
 
         - name: Link ros_packages directories to src
           ansible.builtin.file:
