--- a/ansible/host_computer.yml
+++ b/ansible/host_computer.yml
@@ -131,7 +131,7 @@
 
         - name: Remove unwanted directories from planner packages
           file:
-            path: "{{ drone_ros_path }}/src/multi_agent_pkgs/{{ item }}"
+            path: "{{ host_ros_path }}/src/multi_agent_pkgs/{{ item }}"
             state: absent
           loop:
             - convex_decomp_util
@@ -154,7 +154,7 @@
 
         - name: Remove unwanted directories from MPC controller packages
           file:
-            path: "{{ drone_ros_path }}/src/mpc_controller_pkgs/{{ item }}"
+            path: "{{ host_ros_path }}/src/mpc_controller_pkgs/{{ item }}"
             state: absent
           loop:
             - dockerfiles
@@ -217,15 +217,15 @@
       ansible.builtin.apt:
         update_cache: true
         name: 
-          - gcc-arm-none-eabi=15:10.3-2021.07-4
-          - fuse=2.9.9-5ubuntu3
-          - gstreamer1.0-plugins-bad=1.20.3-0ubuntu1.1
-          - gstreamer1.0-libav=1.20.3-0ubuntu1
-          - gstreamer1.0-gl=1.20.1-1ubuntu0.4
-          - libfuse2=2.9.9-5ubuntu3
-          - libxcb-xinerama0=1.14-3ubuntu3 
-          - libxkbcommon-x11-0=1.4.0-1 
-          - libxcb-cursor-dev=0.1.1-4ubuntu1
+          - gcc-arm-none-eabi
+          - fuse
+          - gstreamer1.0-plugins-bad
+          - gstreamer1.0-libav
+          - gstreamer1.0-gl
+          - libfuse2
+          - libxcb-xinerama0
+          - libxkbcommon-x11-0
+          - libxcb-cursor-dev
     - name: Allow rootless access to flight controller (needed for QGroundControl)
       become: true
       ansible.builtin.user: 
@@ -242,7 +242,7 @@
       block: 
       - name: Get QGroundControl
         ansible.builtin.get_url:
-          url: https://d176tv9ibo4jno.cloudfront.net/latest/QGroundControl.AppImage
+          url: https://github.com/mavlink/qgroundcontrol/releases/download/v4.4.5/QGroundControl.AppImage
           dest: "{{ host_fc_path }}/QGroundControl.AppImage"
           mode: '0755' # executable for us
       - name: Install required python packages for PX4
@@ -254,7 +254,7 @@
       - name: Clone px4 repository
         ansible.builtin.git: 
           repo: "https://github.com/PX4/PX4-Autopilot"
-          version: v1.15.4
+          version: 238dffcd1b
           dest: "{{ host_fc_path }}/PX4-Autopilot"
           force: yes
       - name: Build bootloader
