--- a/ansible/drones_command.yml
+++ b/ansible/drones_command.yml
@@ -31,5 +31,6 @@
       loop:
         - { src: "../ros_packages/safety_checker_ros2/config/safety_params.yaml", dest: "{{ drone_ros_path }}/src/safety_checker_ros2/config/safety_params.yaml"}
         - { src: "../ros_packages/drone_state_manager_ros2/config/drone_state_manager_params.yaml", dest: "{{ drone_ros_path }}/src/drone_state_manager_ros2/config/drone_state_manager_params.yaml"}
+        - { src: "/home/toumieh/ros2_ws/src/multi_agent_pkgs/multi_agent_planner/config/agent_omninxt_config.yaml", dest: "{{ drone_ros_path }}/src/multi_agent_pkgs/multi_agent_planner/config/agent_omninxt_config.yaml"}
 
 
