--- a/ansible/drones_preflight.yml
+++ b/ansible/drones_preflight.yml
@@ -71,26 +71,9 @@
     gcs_url: "{{ host_hostname }}.local" 
 
   tasks:
-
-    - name: Chrony Stuff
-      become: yes
-      block:
-      - name: Remove all sources
-        become: yes
-        ansible.builtin.replace: 
-          path: /etc/chrony/chrony.conf
-          regexp: "^((pool)|(sourcedir))" 
-          replace: "# \\1"
-        
-      - name: Add host IPs
-        ansible.builtin.blockinfile:
-          path: /etc/chrony/chrony.conf
-          block: | # change the possible ips and chrony min/max poll in ansible/group_vars/all
-              server {{ gcs_url }}  iburst minpoll {{ chrony_minpoll }} maxpoll {{ chrony_maxpoll }}
-      - name: Restart chronyd
-        ansible.builtin.systemd:
-          name: chronyd
-          state: restarted
+    
+    - name: Setup chrony sync
+      ansible.builtin.include_tasks: "tasks/chrony-sync.yml"
 
     - name: Create directories
       ansible.builtin.file:
