--- a/ansible/drones_command.yml
+++ b/ansible/drones_command.yml
@@ -8,30 +8,30 @@
   #   - name: command
   #     prompt: "What command do you want to run on all of the drones (WARNING: Runs as sudo!)?"
   #     private: false  
-  # tasks:
+  tasks:
   #   - name: Command
   #     ansible.builtin.command: '{{ command }}'
-  #   - name: "Common Components"
-  #     ansible.builtin.include_tasks: "tasks/install-acados.yml"
+    - name: "Common Components"
+      ansible.builtin.include_tasks: "tasks/install-microxrce.yml"
 
-  tasks:
-    - name: Copy Gurobi license file
-      ansible.builtin.copy:
-        src: secrets/gurobi.lic
-        dest: /opt/gurobi/gurobi.lic
-        mode: '0644'
-        owner: root
-        group: root
+  # tasks:
+  #   - name: Copy Gurobi license file
+  #     ansible.builtin.copy:
+  #       src: secrets/gurobi.lic
+  #       dest: /opt/gurobi/gurobi.lic
+  #       mode: '0644'
+  #       owner: root
+  #       group: root
 
-    - name: Send files
-      ansible.builtin.template:
-        src: "{{ item.src }}"
-        dest: "{{ item.dest }}"
-        mode: "644"
-      loop:
-        - { src: "../ros_packages/safety_checker_ros2/config/safety_params.yaml", dest: "{{ drone_ros_path }}/src/safety_checker_ros2/config/safety_params.yaml"}
-        - { src: "../ros_packages/drone_state_manager_ros2/config/drone_state_manager_params.yaml", dest: "{{ drone_ros_path }}/src/drone_state_manager_ros2/config/drone_state_manager_params.yaml"}
-        - { src: "/home/toumieh/ros2_ws/src/multi_agent_pkgs/multi_agent_planner/config/agent_omninxt_config.yaml", dest: "{{ drone_ros_path }}/src/multi_agent_pkgs/multi_agent_planner/config/agent_omninxt_config.yaml"}
-        - { src: "/home/toumieh/ros2_ws/src/mpc_controller_pkgs/mpc_controller_ros2/config/mpc_omninxt_params.yaml", dest: "{{ drone_ros_path }}/src/mpc_controller_pkgs/mpc_controller_ros2/config/mpc_omninxt_params.yaml"}
+  #   - name: Send files
+  #     ansible.builtin.template:
+  #       src: "{{ item.src }}"
+  #       dest: "{{ item.dest }}"
+  #       mode: "644"
+  #     loop:
+  #       - { src: "../ros_packages/safety_checker_ros2/config/safety_params.yaml", dest: "{{ drone_ros_path }}/src/safety_checker_ros2/config/safety_params.yaml"}
+  #       - { src: "../ros_packages/drone_state_manager_ros2/config/drone_state_manager_params.yaml", dest: "{{ drone_ros_path }}/src/drone_state_manager_ros2/config/drone_state_manager_params.yaml"}
+  #       - { src: "/home/toumieh/ros2_ws/src/multi_agent_pkgs/multi_agent_planner/config/agent_omninxt_config.yaml", dest: "{{ drone_ros_path }}/src/multi_agent_pkgs/multi_agent_planner/config/agent_omninxt_config.yaml"}
+  #       - { src: "/home/toumieh/ros2_ws/src/mpc_controller_pkgs/mpc_controller_ros2/config/mpc_omninxt_params.yaml", dest: "{{ drone_ros_path }}/src/mpc_controller_pkgs/mpc_controller_ros2/config/mpc_omninxt_params.yaml"}
 
 
