--- a/ansible/drones_update.yml
+++ b/ansible/drones_update.yml
@@ -4,6 +4,9 @@
   become: false
   vars: 
     gcs_url: "{{ host_hostname }}.local" 
+    microxrce_agent_path: "{{ drone_base_path }}/repos"
+    microxrce_agent_repo: "https://github.com/eProsima/Micro-XRCE-DDS-Agent.git"
+    microxrce_agent_version: "v2.4.3" 
 
   tasks:
   - name: Ensure we are synced with chrony
@@ -57,7 +60,6 @@
       force: yes
       version: niel/chill-dynamics
 
-      
   - name: SwarmNXT Nodes
     block: 
       - name: Get repository 
