add shutdown ansible

--- a/ros_packages/drone_state_manager_ros2/CMakeLists.txt
+++ b/ros_packages/drone_state_manager_ros2/CMakeLists.txt
@@ -15,5 +15,10 @@ install(PROGRAMS
   DESTINATION lib/${PROJECT_NAME}
 )
 
+install(DIRECTORY
+  config
+  DESTINATION share/${PROJECT_NAME}
+)
+
 # Ament Package
 ament_package()
