--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,3 +1,5 @@
+# you can change the value of enable_vision in group_vars/all per drone 
+# by appending it at the end: nxt1.local enable_vision=true
 [drones]
 ;nxt1.local
 ;nxt2.local
@@ -10,15 +12,6 @@ nxt8.local
 nxt9.local
 [drones:vars]
 ansible_become_password=orin
-
-
-[sim_drones]
-nxt1
-
-[sim_drones:vars]
-ansible_connection=community.docker.docker
-ansible_python_interpreter=python3
-remote_tmp = /tmp/.ansible-${USER}/tmp
 
 [local_drone]
 192.168.55.1 
