--- a/ansible/drones_preflight.yml
+++ b/ansible/drones_preflight.yml
@@ -1,4 +1,39 @@
 ---
+# --- PLAY 1: KICK OFF VISION CHECKS ---
+- name: Start Vision Checks Early
+  hosts: drones
+  remote_user: lis
+  gather_facts: no
+  tasks:
+    - name: Launch Vision Tests (Async)
+      when: enable_vision | default(false) | bool
+      ansible.builtin.shell: |
+        source /opt/ros/humble/setup.bash
+        source {{ drone_ros_path }}/install/setup.bash
+
+        # 1. Sync Check
+        if ! ros2 run oak_ffc_4p_driver_ros2 oak_sync_checker; then
+            echo "SYNC_FAILED" >&2
+            exit 1
+        fi
+
+        # 2. Focus Check
+        if ! ros2 run oak_ffc_4p_driver_ros2 oak_focus_checker -- --threshold=500 --timeout-ms=2000; then
+            echo "FOCUS_FAILED" >&2
+            exit 1
+        fi
+      args:
+        executable: /bin/bash
+      async: 180   # 3 minutes timeout (covers local build + drone setup time)
+      poll: 0      # Fire and forget
+      register: vision_launch_job
+
+    - name: Save Job ID for Later
+      when: enable_vision | default(false) | bool
+      set_fact:
+        vision_job_id: "{{ vision_launch_job.ansible_job_id }}"
+
+# --- PLAY 2: LOCAL SETUP (Runs in parallel with Vision Checks) ---
 - name: Local Actions
   connection: local
   hosts: localhost
@@ -12,26 +47,27 @@
         ansible.builtin.include_tasks: tasks/local-build.yml
 
       - name: Create local launch file
-        ansible.builtin.template: 
+        ansible.builtin.template:
           src: templates/host_launch.py.j2
           dest: "{{ host_base_path }}/launch.py"
-      - name: Create ros_packages script 
+
+      - name: Create ros_packages script
         become: false
-        vars: 
+        vars:
           ros_path: "{{ host_ros_path }}"
           base_path: "{{ host_base_path }}"
           drone_num: 0
-        ansible.builtin.template: 
+        ansible.builtin.template:
           src: scripts/ros_packages_start.sh
           dest: "{{ host_base_path }}/ros_packages_start.sh"
           mode: "755"
-     
+
       - name: Create config directory
         ansible.builtin.file:
           dest: "{{ host_ros_path }}/config"
           state: directory
           mode: "755"
-    
+
       - name: Send configuration files
         ansible.builtin.template:
           src: "{{ item.src }}"
@@ -48,13 +84,14 @@
         ansible.builtin.file:
           dest: "~/.local/share/systemd/user"
           state: directory
-          
-      - name: Copy ros_packages service 
+
+      - name: Copy ros_packages service
         vars:
           base_path: "{{ host_base_path }}"
-        ansible.builtin.template: 
+        ansible.builtin.template:
           src: templates/ros_packages_service.j2
           dest: ~/.local/share/systemd/user/ros_packages.service
+
       - name: Start ros_packages service
         ansible.builtin.systemd:
           name: "ros_packages"
@@ -63,14 +100,14 @@
           scope: user
           daemon_reload: true
 
-- name: Preflight
+# --- PLAY 3: DRONE SETUP & VERIFICATION ---
+- name: Preflight Drone Setup
   hosts: drones
   remote_user: lis
-  vars: 
-    gcs_url: "{{ host_hostname }}.local" 
+  vars:
+    gcs_url: "{{ host_hostname }}.local"
 
   tasks:
-    
     - name: Setup chrony sync
       ansible.builtin.include_tasks: "tasks/chrony-sync.yml"
 
@@ -79,12 +116,12 @@
         dest: "{{ item.dest }}"
         state: directory
         mode: "755"
-      loop: 
+      loop:
         - {dest: "{{ drone_ros_path }}/config"}
         - {dest: "{{ drone_base_path }}/scripts"}
         - {dest: "{{ drone_base_path }}/logs/scripts"}
         - {dest: "~/.local/share/systemd/user"}
-    
+
     - name: Send files
       ansible.builtin.template:
         src: "{{ item.src }}"
@@ -97,36 +134,51 @@
         - { src: "templates/drone_launch.py.j2", dest: "{{ drone_base_path }}/launch.py"}
         - { src: "templates/ros_packages_service.j2", dest: "~/.local/share/systemd/user/ros_packages.service"}
         - { src: "templates/micro_xrce_service.j2", dest: "~/.local/share/systemd/user/micro_xrce.service"}
-
       vars:
         peers: "{{ groups['drones'] | map('regex_replace', '\\.local$', '') | join('\n') }}"
         ros_path: "{{ drone_ros_path }}"
         base_path: "{{ drone_base_path }}"
-        
-      
+
     - name: Send executable files
-      ansible.builtin.template: 
+      ansible.builtin.template:
         src: "{{ item.src }}"
         dest: "{{ item.dest }}"
         mode: "0755"
-      vars: 
+      vars:
         ros_path: "{{ drone_ros_path }}"
         base_path: "{{ drone_base_path }}"
-      loop: 
+      loop:
         - { src: "scripts/ros_packages_start.sh", dest: "{{ drone_base_path }}/ros_packages_start.sh"}
-  
+
     - name: Chrony Tracking Check
-      block: 
+      block:
         - name: Copy script
-          ansible.builtin.copy: 
+          ansible.builtin.copy:
             src: scripts/chronyc_check.py
             dest: /tmp/chronyc_check.py
             mode: '0755'
-          
         - name: Check if we're tracking
           ansible.builtin.shell: /tmp/chronyc_check.py
           register: chronyc_check
           changed_when: false
+
+    # --- WAIT FOR VISION RESULTS ---
+    - name: Verify Vision Checks
+      when: enable_vision | default(false) | bool
+      block:
+        - name: Wait for Vision Job
+          ansible.builtin.async_status:
+            jid: "{{ vision_job_id }}"
+          register: vision_result
+          until: vision_result.finished
+          retries: 180
+          delay: 1
+
+        - name: Check Vision Success
+          fail:
+             msg: "{{ (vision_result.stderr | regex_search('(SYNC_FAILED|FOCUS_FAILED|FAILED:.*|OUT_OF_FOCUS:.*)', multiline=True)) | default('Vision Checks Failed') }}"
+          when: vision_result.rc != 0
+    # -------------------------------
 
     - name: Start & Enable MicroXRCE service
       ansible.builtin.systemd:
@@ -135,13 +187,11 @@
         enabled: true
         scope: user
         daemon_reload: true
-        
+
     - name: Start ros_packages service
-      ansible.builtin.systemd: 
+      ansible.builtin.systemd:
         name: ros_packages
         state: restarted
         enabled: false
         daemon_reload: true
         scope: user
-
-# TODO: Add something about waiting and checking all the packages after :)
