--- a/ansible/drones_postflight.yml
+++ b/ansible/drones_postflight.yml
@@ -48,7 +48,7 @@
           - "--mkpath"
       delegate_to: localhost
 
-    - name: Pull additional temporary logs (MPC, Depth, Planner)
+    - name: Pull MPC and Planner logs
       ansible.posix.synchronize:
         mode: pull
         src: "{{ item.src }}" # Trailing slash copies contents
@@ -62,17 +62,30 @@
       ignore_errors: true
       loop:
         - { src: "/tmp/mpc_logs/latest/", name: "mpc_logs" }
-        - { src: "/tmp/depth_logs/", name: "depth_logs" }
         - { src: "/tmp/planner_logs/", name: "planner_logs" }
 
-- name: Analyze consolidated logs
+    - name: Pull Depth logs
+      when: enable_vision | default(false) | bool
+      ansible.posix.synchronize:
+        mode: pull
+        src: "/tmp/depth_logs/"
+        dest: "{{ host_base_path }}/consolidated_logs/latest/{{ ansible_hostname }}/depth_logs/"
+        recursive: yes
+        archive: yes
+        compress: yes
+        rsync_opts:
+          - "--mkpath"
+      delegate_to: localhost
+      ignore_errors: true
+
+    - name: Analyze consolidated logs
       ansible.builtin.command: >
-        python3 scripts/analyze_logs.py --log-dir consolidated_logs/latest
+        python3 scripts/analyze_logs.py --log-dir "{{ host_base_path }}/consolidated_logs/latest"
       args:
-        chdir: "{{ playbook_dir }}" # Ensures we are in the root ansible folder
+        chdir: "{{ playbook_dir }}"
       register: analysis_output
-      delegate_to: localhost        # Run this on your machine, not the drone
-      run_once: true                # Run only once, not for every drone
+      delegate_to: localhost
+      run_once: true
 
     - name: Display analysis results
       ansible.builtin.debug:
