--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,15 +1,15 @@
 # you can change the value of enable_vision in group_vars/all per drone 
 # by appending it at the end: nxt1.local enable_vision=true
 [drones]
-;nxt1.local
-;nxt2.local
-;nxt3.local
-; nxt4.local
+; nxt1.local
+; nxt2.local
+; nxt3.local
+nxt4.local
 nxt5.local
-;nxt6.local 
-; nxt7.local
-; nxt8.local
-; nxt9.local
+; nxt6.local 
+nxt7.local
+nxt8.local
+nxt9.local
 [drones:vars]
 ansible_become_password=orin
 
