--- a/ansible/drones_command.yml
+++ b/ansible/drones_command.yml
@@ -68,13 +68,13 @@
   #         args:
   #           executable: /bin/bash
 
-  #   - name: Copy Gurobi license file
-  #     ansible.builtin.copy:
-  #       src: secrets/gurobi.lic
-  #       dest: /opt/gurobi/gurobi.lic
-  #       mode: '0644'
-  #       owner: root
-  #       group: root
+    - name: Copy Gurobi license file
+      ansible.builtin.copy:
+        src: secrets/gurobi.lic
+        dest: /opt/gurobi/gurobi.lic
+        mode: '0644'
+        owner: root
+        group: root
 
     - name: Send files
       ansible.builtin.template:
