--- a/ansible/tasks/setup-common.yml
+++ b/ansible/tasks/setup-common.yml
@@ -51,7 +51,12 @@
         url: https://download.docker.com/linux/ubuntu/gpg
         dest: /etc/apt/keyrings/docker.asc
         mode: '0644'
-    
+   
+    - name: Delete old docker.list file 
+      ansible.builtin.file: 
+        path: /etc/apt/sources.list.d/docker.list
+        state: absent
+
     - name: Add Docker repository
       ansible.builtin.lineinfile:
         path: /etc/apt/sources.list.d/docker.list
