--- a/ansible/tasks/setup-common.yml
+++ b/ansible/tasks/setup-common.yml
@@ -32,6 +32,11 @@
   ansible.builtin.include_tasks: "patch-kernel.yml"       
 - name: Add Docker apt repository
   block:
+    - name: Remove existing Docker repository definition to prevent conflicts
+      ansible.builtin.file:
+        path: /etc/apt/sources.list.d/docker.list
+        state: absent
+
     - name: Install prerequisites
       ansible.builtin.apt:
         name:
