update threshold for focus

--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -1,9 +1,9 @@
 # you can change the value of enable_vision in group_vars/all per drone 
 # by appending it at the end: nxt1.local enable_vision=true
 [drones]
-nxt1.local
+; nxt1.local
 ; nxt2.local
-; nxt3.local
+nxt3.local enable_vision=true
 ; nxt4.local
 ; nxt5.local
 ; nxt6.local 
