--- a/ansible/drones_preflight.yml
+++ b/ansible/drones_preflight.yml
@@ -17,8 +17,11 @@
             exit 1
         fi
 
+        # Wait for device to re-enumerate after sync checker releases it
+        sleep 1
+
         # 2. Focus Check
-        if ! ros2 run oak_ffc_4p_driver_ros2 oak_focus_checker -- --threshold=500 --timeout-ms=2000; then
+        if ! ros2 run oak_ffc_4p_driver_ros2 oak_focus_checker -- --threshold=400 --timeout-ms=2000; then
             echo "FOCUS_FAILED" >&2
             exit 1
         fi
